@@ -1,5 +1,6 @@
 ﻿Version 1.3
 
+- Add experimental growable option
 - Add override for building levels on game load (only applies to buildings in LocalRICOSettings.xml)
 - Suppress errors for buildings that are deactivated
 - Tweak settings window layout and widen options panel.
